--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-h1{
+h1 {
   text-align: center;
 }
 
-.center{
-    max-width: 100%;
-    max-height: 100%;
+.center {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .square {
@@ -15,6 +15,25 @@ h1{
   margin-right: auto;
 }
 
-img{
+img {
   object-fit: cover;
+}
+
+.bottom-fragger {
+  text-decoration: none;
+  color: white;
+}
+
+.just-bottom {
+  background-color: rgba(56, 5, 56, 0.637);
+}
+
+.bottom-fragger a {
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
+  .bottom-fragger a {
+    font-size: 10px;
+  }
 }
